gitops/manifests/Archive/urlchecker/install.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: urlchecker
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: urlchecker
  namespace: urlchecker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: urlchecker
  template:
    metadata:
      labels:
        app: urlchecker
    spec:
      dnsPolicy: "None" # Use "None" to ensure custom DNS settings are applied
      dnsConfig:
        nameservers:
          - 192.168.86.214
      containers:
        - name: urlchecker
          image: timmyb824/python-urlchecker:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: checks
              mountPath: /app/checks.yaml
              subPath: checks.yaml
      volumes:
        - name: checks
          configMap:
            name: checks
---
apiVersion: v1
kind: Service
metadata:
  name: urlchecker
  namespace: urlchecker
spec:
  selector:
    app: urlchecker
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: urlchecker-ingress
  namespace: urlchecker
  annotations:
    kubernetes.io/ingress.class: traefik-external
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`urlchecker.local.timmybtech.com`)
      kind: Rule
      services:
        - name: urlchecker
          port: 8000
  tls:
    secretName: local-timmybtech-com-tls
